--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
-    "name": "cachier",
-    "version": "0.0.1"
+  "name": "cachier",
+  "version": "0.0.2",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/ZIJ/cachier.git"
+  },
+  "devDependencies": {
+    "gulp": "~3.8.0",
+    "gulp-jshint": "~1.6.2",
+    "jshint-stylish": "~0.2.0",
+    "gulp-uglify": "~0.3.0",
+    "gulp-rename": "~1.2.0"
+  }
 }
